--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../out-tsc/e2e",
     "module": "commonjs",
-    "target": "ES2017",
+    "target": "es5",
     "types": [
       "jasmine",
       "jasminewd2",
